alter title and map center

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <!-- The content below is only a placeholder and can be replaced. -->
 <div class="title">
   <h1>
-    Welcome to
+    Welcome to my POC: 
     <a class="api-url" href="https://developers.arcgis.com/javascript/">
       ArcGIS API for JavaScript
     </a>
